Change imgage's order and fix landing's layout issues

--- a/src/assets/css/landing.css
+++ b/src/assets/css/landing.css
@@ -137,7 +137,7 @@
 .left.one .title.new.date-enrollment {
   color: #3e6171;
   white-space: pre-wrap;
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
 }
 .left.one .btn-enrollment {
   margin-left: 1vw;
@@ -690,7 +690,7 @@
 }
 .right.one {
   /* background-image: url("../img/landing_bg_1.jpg"); */
-  background-image: url("../img/landing_bg_1_new.jpg");
+  background-image: url("../img/muveszitorna-balett-moderntanc.png");
 }
 .right.two {
   background-image: url("../img/landing_bg_2.jpg");
@@ -896,9 +896,15 @@
     margin-left: unset;
   }
   .left.one .titles {
-    display: flex;
+    /* display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: center; */
+  }
+  .left.one .titles label:nth-last-child() {
+    margin-top: 0;
+    /* display: flex;
+    flex-direction: row;
+    align-items: center; */
   }
   .left.one .title {
     font-size: 38px;
